# aabbcc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: aabbccConfig.cmake.in  generate_header_only.cmake  header-only.h.in
demos/: CMakeLists.txt  MersenneTwister.h  hard_disc.cc  vmd.tcl
dox/: Doxyfile  mainpage.dox
python/: aabb.i  hard_disc.py  setup.py
src/: AABB.cc  AABB.h
